// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CardModal /> > renders expected size 1`] = `
<dialog
  class="bg-transparent backdrop:bg-black/50 flex w-screen h-screen max-w-screen max-h-screen"
  open=""
>
  <form
    class="w-full m-auto p-4 sm:p-6 -translate-y-4 data-open:translate-y-0 opacity-0 data-open:opacity-100 transition-[opacity_,_translate] duration-300 sm:w-sm"
    data-open=""
    data-testid="transition-container"
  >
    <div
      class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary w-full"
    >
      <div
        class="px-4 py-3 rounded-t-md bg-lm-primary dark:bg-dm-primary border-b border-lm-border dark:border-dm-border sticky top-0 flex items-center justify-between gap-x-2"
      >
        <h5
          class=""
        >
          The title
        </h5>
        <button
          aria-label="Close dialog"
          class="rounded-md focus-ring cursor-pointer opacity-50 highlight:opacity-80 transition-opacity"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-xmark fa-xl "
            data-icon="xmark"
            data-prefix="fas"
            role="img"
            viewBox="0 0 384 512"
          >
            <path
              d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
      >
        <div
          data-testid="content"
        >
          This is the content
        </div>
      </div>
    </div>
  </form>
</dialog>
`;

exports[`<CardModal /> > renders expected size 2`] = `
<dialog
  class="bg-transparent backdrop:bg-black/50 flex w-screen h-screen max-w-screen max-h-screen"
  open=""
>
  <form
    class="w-full m-auto p-4 sm:p-6 -translate-y-4 data-open:translate-y-0 opacity-0 data-open:opacity-100 transition-[opacity_,_translate] duration-300 md:w-lg"
    data-open=""
    data-testid="transition-container"
  >
    <div
      class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary w-full"
    >
      <div
        class="px-4 py-3 rounded-t-md bg-lm-primary dark:bg-dm-primary border-b border-lm-border dark:border-dm-border sticky top-0 flex items-center justify-between gap-x-2"
      >
        <h5
          class=""
        >
          The title
        </h5>
        <button
          aria-label="Close dialog"
          class="rounded-md focus-ring cursor-pointer opacity-50 highlight:opacity-80 transition-opacity"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-xmark fa-xl "
            data-icon="xmark"
            data-prefix="fas"
            role="img"
            viewBox="0 0 384 512"
          >
            <path
              d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
      >
        <div
          data-testid="content"
        >
          This is the content
        </div>
      </div>
    </div>
  </form>
</dialog>
`;

exports[`<CardModal /> > renders expected size 3`] = `
<dialog
  class="bg-transparent backdrop:bg-black/50 flex w-screen h-screen max-w-screen max-h-screen"
  open=""
>
  <form
    class="w-full m-auto p-4 sm:p-6 -translate-y-4 data-open:translate-y-0 opacity-0 data-open:opacity-100 transition-[opacity_,_translate] duration-300 md:w-4xl"
    data-open=""
    data-testid="transition-container"
  >
    <div
      class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary w-full"
    >
      <div
        class="px-4 py-3 rounded-t-md bg-lm-primary dark:bg-dm-primary border-b border-lm-border dark:border-dm-border sticky top-0 flex items-center justify-between gap-x-2"
      >
        <h5
          class=""
        >
          The title
        </h5>
        <button
          aria-label="Close dialog"
          class="rounded-md focus-ring cursor-pointer opacity-50 highlight:opacity-80 transition-opacity"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-xmark fa-xl "
            data-icon="xmark"
            data-prefix="fas"
            role="img"
            viewBox="0 0 384 512"
          >
            <path
              d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
      >
        <div
          data-testid="content"
        >
          This is the content
        </div>
      </div>
    </div>
  </form>
</dialog>
`;

exports[`<CardModal /> > renders expected size 4`] = `
<dialog
  class="bg-transparent backdrop:bg-black/50 flex w-screen h-screen max-w-screen max-h-screen"
  open=""
>
  <form
    class="w-full m-auto p-4 sm:p-6 -translate-y-4 data-open:translate-y-0 opacity-0 data-open:opacity-100 transition-[opacity_,_translate] duration-300 md:w-6xl"
    data-open=""
    data-testid="transition-container"
  >
    <div
      class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary w-full"
    >
      <div
        class="px-4 py-3 rounded-t-md bg-lm-primary dark:bg-dm-primary border-b border-lm-border dark:border-dm-border sticky top-0 flex items-center justify-between gap-x-2"
      >
        <h5
          class=""
        >
          The title
        </h5>
        <button
          aria-label="Close dialog"
          class="rounded-md focus-ring cursor-pointer opacity-50 highlight:opacity-80 transition-opacity"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-xmark fa-xl "
            data-icon="xmark"
            data-prefix="fas"
            role="img"
            viewBox="0 0 384 512"
          >
            <path
              d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
      >
        <div
          data-testid="content"
        >
          This is the content
        </div>
      </div>
    </div>
  </form>
</dialog>
`;

exports[`<CardModal /> > renders expected variant 1`] = `
<dialog
  class="bg-transparent backdrop:bg-black/50 flex w-screen h-screen max-w-screen max-h-screen"
  open=""
>
  <form
    class="w-full m-auto p-4 sm:p-6 -translate-y-4 data-open:translate-y-0 opacity-0 data-open:opacity-100 transition-[opacity_,_translate] duration-300 md:w-lg"
    data-open=""
    data-testid="transition-container"
  >
    <div
      class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary w-full"
    >
      <div
        class="px-4 py-3 rounded-t-md bg-lm-primary dark:bg-dm-primary border-b border-lm-border dark:border-dm-border sticky top-0 flex items-center justify-between gap-x-2"
      >
        <h5
          class=""
        >
          The title
        </h5>
        <button
          aria-label="Close dialog"
          class="rounded-md focus-ring cursor-pointer opacity-50 highlight:opacity-80 transition-opacity"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-xmark fa-xl "
            data-icon="xmark"
            data-prefix="fas"
            role="img"
            viewBox="0 0 384 512"
          >
            <path
              d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
      >
        <div
          data-testid="content"
        >
          This is the content
        </div>
      </div>
      <div
        class="px-4 py-3 rounded-b-md bg-lm-primary dark:bg-dm-primary border-t border-lm-border dark:border-dm-border flex justify-end items-center gap-x-2 [&]:px-3 sticky bottom-0"
        data-testid="footer"
      >
        <button
          class="inline-flex rounded-md focus-ring text-lm-brand dark:text-dm-brand highlight:text-lm-brand-dark dark:highlight:text-dm-brand-dark highlight:underline px-3 py-1.5 cursor-pointer"
          type="button"
        >
          Cancel
        </button>
        <button
          class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-3 py-1.5 border-lm-brand dark:border-dm-brand text-white bg-lm-brand dark:bg-dm-brand highlight:bg-lm-brand-dark dark:highlight:bg-dm-brand-dark highlight:border-lm-brand-dark dark:highlight:border-dm-brand-dark highlight:bg-lm-brand dark:highlight:bg-dm-brand cursor-pointer"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </div>
  </form>
</dialog>
`;

exports[`<CardModal /> > renders expected variant 2`] = `
<dialog
  class="bg-transparent backdrop:bg-black/50 flex w-screen h-screen max-w-screen max-h-screen"
  open=""
>
  <form
    class="w-full m-auto p-4 sm:p-6 -translate-y-4 data-open:translate-y-0 opacity-0 data-open:opacity-100 transition-[opacity_,_translate] duration-300 md:w-lg"
    data-open=""
    data-testid="transition-container"
  >
    <div
      class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary w-full"
    >
      <div
        class="px-4 py-3 rounded-t-md bg-lm-primary dark:bg-dm-primary border-b border-lm-border dark:border-dm-border sticky top-0 flex items-center justify-between gap-x-2"
      >
        <h5
          class="text-danger"
        >
          The title
        </h5>
        <button
          aria-label="Close dialog"
          class="rounded-md focus-ring cursor-pointer opacity-50 highlight:opacity-80 transition-opacity"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-xmark fa-xl "
            data-icon="xmark"
            data-prefix="fas"
            role="img"
            viewBox="0 0 384 512"
          >
            <path
              d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
      >
        <div
          data-testid="content"
        >
          This is the content
        </div>
      </div>
      <div
        class="px-4 py-3 rounded-b-md bg-lm-primary dark:bg-dm-primary border-t border-lm-border dark:border-dm-border flex justify-end items-center gap-x-2 [&]:px-3 sticky bottom-0"
        data-testid="footer"
      >
        <button
          class="inline-flex rounded-md focus-ring text-lm-brand dark:text-dm-brand highlight:text-lm-brand-dark dark:highlight:text-dm-brand-dark highlight:underline px-3 py-1.5 cursor-pointer"
          type="button"
        >
          Cancel
        </button>
        <button
          class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring-danger px-3 py-1.5 border-danger text-white bg-danger highlight:bg-danger-dark highlight:border-danger-dark highlight:bg-danger cursor-pointer"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </div>
  </form>
</dialog>
`;

exports[`<CardModal /> > renders expected variant 3`] = `
<dialog
  class="bg-transparent backdrop:bg-black/50 flex w-screen h-screen max-w-screen max-h-screen overflow-hidden"
  open=""
>
  <form
    class="w-full m-auto p-4 sm:p-6 -translate-y-4 data-open:translate-y-0 opacity-0 data-open:opacity-100 transition-[opacity_,_translate] duration-300 h-full"
    data-open=""
    data-testid="transition-container"
  >
    <div
      class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary w-full h-full relative overflow-auto"
    >
      <div
        class="px-4 py-3 absolute top-0 left-0 right-0 z-3000 flex items-center justify-between text-white bg-linear-to-b from-black/70 to-black/10 [text-shadow:_0_2px_4px_rgb(0_0_0/_0.8)]"
      >
        <h5>
          The title
        </h5>
        <button
          aria-label="Close dialog"
          class="rounded-md focus-ring cursor-pointer opacity-50 highlight:opacity-80 transition-opacity"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-xmark fa-xl "
            data-icon="xmark"
            data-prefix="fas"
            role="img"
            viewBox="0 0 384 512"
          >
            <path
              d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        data-testid="content"
      >
        This is the content
      </div>
    </div>
  </form>
</dialog>
`;
